tests/neg/call.stk
fun foo(x: Int): Unit = x p

fun bar(x: Int): Unit =
  foo  // error
  x p

fun main =
  bar    // error
  10 p
